--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ body {
     background-color: white;
 }
 
-.inputLogin .v-field {
+.inputLogin .v-field .v-text-field{
     background-color: rgba(255, 246, 228, 0.5);
     border-radius: 10px !important;
     border: 3px solid #5C4725 !important;
